--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles --forceExit",
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
-    "test:ci": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles --forceExit --ci --coverage"
+    "test:ci": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles --forceExit --ci --coverage",
+    "lint": "eslint ."
   },
   "keywords": [
     "hotel",
